@@ -19,15 +19,14 @@ class NewsListingBlockView(BaseBlock):
         This method returns a dict containing information to be used in
         the block's template.
         """
-        parent = aq_parent(aq_inner(self.context))
 
         rss_link_url = ''
         if self.context.show_rss_link:
-            rss_link_url = '/'.join([parent.absolute_url(), 'news_listing_rss'])
+            rss_link_url = '/'.join([self.context.absolute_url(), 'news_listing_rss'])
 
         more_news_link_url = ''
         if self.context.show_more_news_link:
-            more_news_link_url = '/'.join([parent.absolute_url(), 'news_listing'])
+            more_news_link_url = '/'.join([self.context.absolute_url(), 'news_listing'])
 
         more_news_link_label = (
             self.context.more_news_link_label or
